Compiladores2/Inter/Contenido/Analizadores/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> etiquetas
Rule 2     etiquetas -> etiquetas etiqueta
Rule 3     etiquetas -> etiqueta
Rule 4     etiqueta -> IDENTIFICADOR ideti instrucciones
Rule 5     ideti -> DOBLEPUNTO
Rule 6     etiqueta -> MAIN ideti instrucciones
Rule 7     instrucciones -> instrucciones instruccion
Rule 8     instrucciones -> <empty>
Rule 9     instruccion -> EXIT PUNTOCOMA
Rule 10    instruccion -> IMPRIMIR PARA expresion PARC PUNTOCOMA
Rule 11    instruccion -> UNSET PARA DOLAR IDENTIFICADOR arra PARC PUNTOCOMA
Rule 12    instruccion -> DOLAR IDENTIFICADOR arra IGUAL expresion PUNTOCOMA
Rule 13    arra -> CORA expresion CORC arra
Rule 14    arra -> <empty>
Rule 15    instruccion -> GOTO IDENTIFICADOR PUNTOCOMA
Rule 16    instruccion -> IF expresion instruccion
Rule 17    expresion -> valor MAS valor
Rule 18    expresion -> valor MENOS valor
Rule 19    expresion -> valor POR valor
Rule 20    expresion -> valor DIVIDIDO valor
Rule 21    expresion -> valor MOD valor
Rule 22    expresion -> valor ANDB valor
Rule 23    expresion -> valor ORB valor
Rule 24    expresion -> valor XORB valor
Rule 25    expresion -> valor SHIFTD valor
Rule 26    expresion -> valor SHIFTI valor
Rule 27    expresion -> valor AND valor
Rule 28    expresion -> valor OR valor
Rule 29    expresion -> valor XOR valor
Rule 30    expresion -> valor DIFERENTE valor
Rule 31    expresion -> valor IGUALDOBLE valor
Rule 32    expresion -> valor MAYOR valor
Rule 33    expresion -> valor MAYORIGUAL valor
Rule 34    expresion -> valor MENORIGUAL valor
Rule 35    expresion -> valor MENOR valor
Rule 36    expresion -> valor
Rule 37    expresion -> MENOS valor
Rule 38    expresion -> ABS PARA valor PARC
Rule 39    expresion -> NOTB valor
Rule 40    expresion -> NOT valor
Rule 41    expresion -> MAS valor
Rule 42    expresion -> ANDB DOLAR IDENTIFICADOR arra
Rule 43    expresion -> READ PARA PARC
Rule 44    expresion -> ARRAY PARA PARC
Rule 45    expresion -> PARA INT PARC valor
Rule 46    expresion -> PARA FLOAT PARC valor
Rule 47    expresion -> PARA CHAR PARC valor
Rule 48    expresion -> PARA expresion PARC
Rule 49    valor -> ENTERO
Rule 50    valor -> DECIMAL
Rule 51    valor -> CADENA
Rule 52    valor -> DOLAR IDENTIFICADOR arra

Terminals, with rules where they appear

ABS                  : 38
AND                  : 27
ANDB                 : 22 42
ARRAY                : 44
CADENA               : 51
CHAR                 : 47
CORA                 : 13
CORC                 : 13
DECIMAL              : 50
DIFERENTE            : 30
DIVIDIDO             : 20
DOBLEPUNTO           : 5
DOLAR                : 11 12 42 52
ENTERO               : 49
EXIT                 : 9
FLOAT                : 46
GOTO                 : 15
IDENTIFICADOR        : 4 11 12 15 42 52
IF                   : 16
IGUAL                : 12
IGUALDOBLE           : 31
IMPRIMIR             : 10
INT                  : 45
MAIN                 : 6
MAS                  : 17 41
MAYOR                : 32
MAYORIGUAL           : 33
MENOR                : 35
MENORIGUAL           : 34
MENOS                : 18 37
MOD                  : 21
NOT                  : 40
NOTB                 : 39
OR                   : 28
ORB                  : 23
PARA                 : 10 11 38 43 44 45 46 47 48
PARC                 : 10 11 38 43 44 45 46 47 48
POR                  : 19
PUNTOCOMA            : 9 10 11 12 15
READ                 : 43
SHIFTD               : 25
SHIFTI               : 26
UNSET                : 11
XOR                  : 29
XORB                 : 24
error                : 

Nonterminals, with rules where they appear

arra                 : 11 12 13 42 52
etiqueta             : 2 3
etiquetas            : 1 2
expresion            : 10 12 13 16 48
ideti                : 4 6
inicio               : 0
instruccion          : 7 16
instrucciones        : 4 6 7
valor                : 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37 38 39 40 41 45 46 47

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . etiquetas
    (2) etiquetas -> . etiquetas etiqueta
    (3) etiquetas -> . etiqueta
    (4) etiqueta -> . IDENTIFICADOR ideti instrucciones
    (6) etiqueta -> . MAIN ideti instrucciones

    IDENTIFICADOR   shift and go to state 4
    MAIN            shift and go to state 5

    inicio                         shift and go to state 1
    etiquetas                      shift and go to state 2
    etiqueta                       shift and go to state 3

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> etiquetas .
    (2) etiquetas -> etiquetas . etiqueta
    (4) etiqueta -> . IDENTIFICADOR ideti instrucciones
    (6) etiqueta -> . MAIN ideti instrucciones

    $end            reduce using rule 1 (inicio -> etiquetas .)
    IDENTIFICADOR   shift and go to state 4
    MAIN            shift and go to state 5

    etiqueta                       shift and go to state 6

state 3

    (3) etiquetas -> etiqueta .

    IDENTIFICADOR   reduce using rule 3 (etiquetas -> etiqueta .)
    MAIN            reduce using rule 3 (etiquetas -> etiqueta .)
    $end            reduce using rule 3 (etiquetas -> etiqueta .)


state 4

    (4) etiqueta -> IDENTIFICADOR . ideti instrucciones
    (5) ideti -> . DOBLEPUNTO

    DOBLEPUNTO      shift and go to state 8

    ideti                          shift and go to state 7

state 5

    (6) etiqueta -> MAIN . ideti instrucciones
    (5) ideti -> . DOBLEPUNTO

    DOBLEPUNTO      shift and go to state 8

    ideti                          shift and go to state 9

state 6

    (2) etiquetas -> etiquetas etiqueta .

    IDENTIFICADOR   reduce using rule 2 (etiquetas -> etiquetas etiqueta .)
    MAIN            reduce using rule 2 (etiquetas -> etiquetas etiqueta .)
    $end            reduce using rule 2 (etiquetas -> etiquetas etiqueta .)


state 7

    (4) etiqueta -> IDENTIFICADOR ideti . instrucciones
    (7) instrucciones -> . instrucciones instruccion
    (8) instrucciones -> .

    EXIT            reduce using rule 8 (instrucciones -> .)
    IMPRIMIR        reduce using rule 8 (instrucciones -> .)
    UNSET           reduce using rule 8 (instrucciones -> .)
    DOLAR           reduce using rule 8 (instrucciones -> .)
    GOTO            reduce using rule 8 (instrucciones -> .)
    IF              reduce using rule 8 (instrucciones -> .)
    IDENTIFICADOR   reduce using rule 8 (instrucciones -> .)
    MAIN            reduce using rule 8 (instrucciones -> .)
    $end            reduce using rule 8 (instrucciones -> .)

    instrucciones                  shift and go to state 10

state 8

    (5) ideti -> DOBLEPUNTO .

    EXIT            reduce using rule 5 (ideti -> DOBLEPUNTO .)
    IMPRIMIR        reduce using rule 5 (ideti -> DOBLEPUNTO .)
    UNSET           reduce using rule 5 (ideti -> DOBLEPUNTO .)
    DOLAR           reduce using rule 5 (ideti -> DOBLEPUNTO .)
    GOTO            reduce using rule 5 (ideti -> DOBLEPUNTO .)
    IF              reduce using rule 5 (ideti -> DOBLEPUNTO .)
    IDENTIFICADOR   reduce using rule 5 (ideti -> DOBLEPUNTO .)
    MAIN            reduce using rule 5 (ideti -> DOBLEPUNTO .)
    $end            reduce using rule 5 (ideti -> DOBLEPUNTO .)


state 9

    (6) etiqueta -> MAIN ideti . instrucciones
    (7) instrucciones -> . instrucciones instruccion
    (8) instrucciones -> .

    EXIT            reduce using rule 8 (instrucciones -> .)
    IMPRIMIR        reduce using rule 8 (instrucciones -> .)
    UNSET           reduce using rule 8 (instrucciones -> .)
    DOLAR           reduce using rule 8 (instrucciones -> .)
    GOTO            reduce using rule 8 (instrucciones -> .)
    IF              reduce using rule 8 (instrucciones -> .)
    IDENTIFICADOR   reduce using rule 8 (instrucciones -> .)
    MAIN            reduce using rule 8 (instrucciones -> .)
    $end            reduce using rule 8 (instrucciones -> .)

    instrucciones                  shift and go to state 11

state 10

    (4) etiqueta -> IDENTIFICADOR ideti instrucciones .
    (7) instrucciones -> instrucciones . instruccion
    (9) instruccion -> . EXIT PUNTOCOMA
    (10) instruccion -> . IMPRIMIR PARA expresion PARC PUNTOCOMA
    (11) instruccion -> . UNSET PARA DOLAR IDENTIFICADOR arra PARC PUNTOCOMA
    (12) instruccion -> . DOLAR IDENTIFICADOR arra IGUAL expresion PUNTOCOMA
    (15) instruccion -> . GOTO IDENTIFICADOR PUNTOCOMA
    (16) instruccion -> . IF expresion instruccion

    IDENTIFICADOR   reduce using rule 4 (etiqueta -> IDENTIFICADOR ideti instrucciones .)
    MAIN            reduce using rule 4 (etiqueta -> IDENTIFICADOR ideti instrucciones .)
    $end            reduce using rule 4 (etiqueta -> IDENTIFICADOR ideti instrucciones .)
    EXIT            shift and go to state 13
    IMPRIMIR        shift and go to state 14
    UNSET           shift and go to state 15
    DOLAR           shift and go to state 16
    GOTO            shift and go to state 17
    IF              shift and go to state 18

    instruccion                    shift and go to state 12

state 11

    (6) etiqueta -> MAIN ideti instrucciones .
    (7) instrucciones -> instrucciones . instruccion
    (9) instruccion -> . EXIT PUNTOCOMA
    (10) instruccion -> . IMPRIMIR PARA expresion PARC PUNTOCOMA
    (11) instruccion -> . UNSET PARA DOLAR IDENTIFICADOR arra PARC PUNTOCOMA
    (12) instruccion -> . DOLAR IDENTIFICADOR arra IGUAL expresion PUNTOCOMA
    (15) instruccion -> . GOTO IDENTIFICADOR PUNTOCOMA
    (16) instruccion -> . IF expresion instruccion

    IDENTIFICADOR   reduce using rule 6 (etiqueta -> MAIN ideti instrucciones .)
    MAIN            reduce using rule 6 (etiqueta -> MAIN ideti instrucciones .)
    $end            reduce using rule 6 (etiqueta -> MAIN ideti instrucciones .)
    EXIT            shift and go to state 13
    IMPRIMIR        shift and go to state 14
    UNSET           shift and go to state 15
    DOLAR           shift and go to state 16
    GOTO            shift and go to state 17
    IF              shift and go to state 18

    instruccion                    shift and go to state 12

state 12

    (7) instrucciones -> instrucciones instruccion .

    EXIT            reduce using rule 7 (instrucciones -> instrucciones instruccion .)
    IMPRIMIR        reduce using rule 7 (instrucciones -> instrucciones instruccion .)
    UNSET           reduce using rule 7 (instrucciones -> instrucciones instruccion .)
    DOLAR           reduce using rule 7 (instrucciones -> instrucciones instruccion .)
    GOTO            reduce using rule 7 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 7 (instrucciones -> instrucciones instruccion .)
    IDENTIFICADOR   reduce using rule 7 (instrucciones -> instrucciones instruccion .)
    MAIN            reduce using rule 7 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 7 (instrucciones -> instrucciones instruccion .)


state 13

    (9) instruccion -> EXIT . PUNTOCOMA

    PUNTOCOMA       shift and go to state 19


state 14

    (10) instruccion -> IMPRIMIR . PARA expresion PARC PUNTOCOMA

    PARA            shift and go to state 20


state 15

    (11) instruccion -> UNSET . PARA DOLAR IDENTIFICADOR arra PARC PUNTOCOMA

    PARA            shift and go to state 21


state 16

    (12) instruccion -> DOLAR . IDENTIFICADOR arra IGUAL expresion PUNTOCOMA

    IDENTIFICADOR   shift and go to state 22


state 17

    (15) instruccion -> GOTO . IDENTIFICADOR PUNTOCOMA

    IDENTIFICADOR   shift and go to state 23


state 18

    (16) instruccion -> IF . expresion instruccion
    (17) expresion -> . valor MAS valor
    (18) expresion -> . valor MENOS valor
    (19) expresion -> . valor POR valor
    (20) expresion -> . valor DIVIDIDO valor
    (21) expresion -> . valor MOD valor
    (22) expresion -> . valor ANDB valor
    (23) expresion -> . valor ORB valor
    (24) expresion -> . valor XORB valor
    (25) expresion -> . valor SHIFTD valor
    (26) expresion -> . valor SHIFTI valor
    (27) expresion -> . valor AND valor
    (28) expresion -> . valor OR valor
    (29) expresion -> . valor XOR valor
    (30) expresion -> . valor DIFERENTE valor
    (31) expresion -> . valor IGUALDOBLE valor
    (32) expresion -> . valor MAYOR valor
    (33) expresion -> . valor MAYORIGUAL valor
    (34) expresion -> . valor MENORIGUAL valor
    (35) expresion -> . valor MENOR valor
    (36) expresion -> . valor
    (37) expresion -> . MENOS valor
    (38) expresion -> . ABS PARA valor PARC
    (39) expresion -> . NOTB valor
    (40) expresion -> . NOT valor
    (41) expresion -> . MAS valor
    (42) expresion -> . ANDB DOLAR IDENTIFICADOR arra
    (43) expresion -> . READ PARA PARC
    (44) expresion -> . ARRAY PARA PARC
    (45) expresion -> . PARA INT PARC valor
    (46) expresion -> . PARA FLOAT PARC valor
    (47) expresion -> . PARA CHAR PARC valor
    (48) expresion -> . PARA expresion PARC
    (49) valor -> . ENTERO
    (50) valor -> . DECIMAL
    (51) valor -> . CADENA
    (52) valor -> . DOLAR IDENTIFICADOR arra

    MENOS           shift and go to state 27
    ABS             shift and go to state 29
    NOTB            shift and go to state 31
    NOT             shift and go to state 32
    MAS             shift and go to state 26
    ANDB            shift and go to state 28
    READ            shift and go to state 34
    ARRAY           shift and go to state 35
    PARA            shift and go to state 30
    ENTERO          shift and go to state 36
    DECIMAL         shift and go to state 37
    CADENA          shift and go to state 38
    DOLAR           shift and go to state 33

    expresion                      shift and go to state 24
    valor                          shift and go to state 25

state 19

    (9) instruccion -> EXIT PUNTOCOMA .

    EXIT            reduce using rule 9 (instruccion -> EXIT PUNTOCOMA .)
    IMPRIMIR        reduce using rule 9 (instruccion -> EXIT PUNTOCOMA .)
    UNSET           reduce using rule 9 (instruccion -> EXIT PUNTOCOMA .)
    DOLAR           reduce using rule 9 (instruccion -> EXIT PUNTOCOMA .)
    GOTO            reduce using rule 9 (instruccion -> EXIT PUNTOCOMA .)
    IF              reduce using rule 9 (instruccion -> EXIT PUNTOCOMA .)
    IDENTIFICADOR   reduce using rule 9 (instruccion -> EXIT PUNTOCOMA .)
    MAIN            reduce using rule 9 (instruccion -> EXIT PUNTOCOMA .)
    $end            reduce using rule 9 (instruccion -> EXIT PUNTOCOMA .)


state 20

    (10) instruccion -> IMPRIMIR PARA . expresion PARC PUNTOCOMA
    (17) expresion -> . valor MAS valor
    (18) expresion -> . valor MENOS valor
    (19) expresion -> . valor POR valor
    (20) expresion -> . valor DIVIDIDO valor
    (21) expresion -> . valor MOD valor
    (22) expresion -> . valor ANDB valor
    (23) expresion -> . valor ORB valor
    (24) expresion -> . valor XORB valor
    (25) expresion -> . valor SHIFTD valor
    (26) expresion -> . valor SHIFTI valor
    (27) expresion -> . valor AND valor
    (28) expresion -> . valor OR valor
    (29) expresion -> . valor XOR valor
    (30) expresion -> . valor DIFERENTE valor
    (31) expresion -> . valor IGUALDOBLE valor
    (32) expresion -> . valor MAYOR valor
    (33) expresion -> . valor MAYORIGUAL valor
    (34) expresion -> . valor MENORIGUAL valor
    (35) expresion -> . valor MENOR valor
    (36) expresion -> . valor
    (37) expresion -> . MENOS valor
    (38) expresion -> . ABS PARA valor PARC
    (39) expresion -> . NOTB valor
    (40) expresion -> . NOT valor
    (41) expresion -> . MAS valor
    (42) expresion -> . ANDB DOLAR IDENTIFICADOR arra
    (43) expresion -> . READ PARA PARC
    (44) expresion -> . ARRAY PARA PARC
    (45) expresion -> . PARA INT PARC valor
    (46) expresion -> . PARA FLOAT PARC valor
    (47) expresion -> . PARA CHAR PARC valor
    (48) expresion -> . PARA expresion PARC
    (49) valor -> . ENTERO
    (50) valor -> . DECIMAL
    (51) valor -> . CADENA
    (52) valor -> . DOLAR IDENTIFICADOR arra

    MENOS           shift and go to state 27
    ABS             shift and go to state 29
    NOTB            shift and go to state 31
    NOT             shift and go to state 32
    MAS             shift and go to state 26
    ANDB            shift and go to state 28
    READ            shift and go to state 34
    ARRAY           shift and go to state 35
    PARA            shift and go to state 30
    ENTERO          shift and go to state 36
    DECIMAL         shift and go to state 37
    CADENA          shift and go to state 38
    DOLAR           shift and go to state 33

    expresion                      shift and go to state 39
    valor                          shift and go to state 25

state 21

    (11) instruccion -> UNSET PARA . DOLAR IDENTIFICADOR arra PARC PUNTOCOMA

    DOLAR           shift and go to state 40


state 22

    (12) instruccion -> DOLAR IDENTIFICADOR . arra IGUAL expresion PUNTOCOMA
    (13) arra -> . CORA expresion CORC arra
    (14) arra -> .

    CORA            shift and go to state 42
    IGUAL           reduce using rule 14 (arra -> .)

    arra                           shift and go to state 41

state 23

    (15) instruccion -> GOTO IDENTIFICADOR . PUNTOCOMA

    PUNTOCOMA       shift and go to state 43


state 24

    (16) instruccion -> IF expresion . instruccion
    (9) instruccion -> . EXIT PUNTOCOMA
    (10) instruccion -> . IMPRIMIR PARA expresion PARC PUNTOCOMA
    (11) instruccion -> . UNSET PARA DOLAR IDENTIFICADOR arra PARC PUNTOCOMA
    (12) instruccion -> . DOLAR IDENTIFICADOR arra IGUAL expresion PUNTOCOMA
    (15) instruccion -> . GOTO IDENTIFICADOR PUNTOCOMA
    (16) instruccion -> . IF expresion instruccion

    EXIT            shift and go to state 13
    IMPRIMIR        shift and go to state 14
    UNSET           shift and go to state 15
    DOLAR           shift and go to state 16
    GOTO            shift and go to state 17
    IF              shift and go to state 18

    instruccion                    shift and go to state 44

state 25

    (17) expresion -> valor . MAS valor
    (18) expresion -> valor . MENOS valor
    (19) expresion -> valor . POR valor
    (20) expresion -> valor . DIVIDIDO valor
    (21) expresion -> valor . MOD valor
    (22) expresion -> valor . ANDB valor
    (23) expresion -> valor . ORB valor
    (24) expresion -> valor . XORB valor
    (25) expresion -> valor . SHIFTD valor
    (26) expresion -> valor . SHIFTI valor
    (27) expresion -> valor . AND valor
    (28) expresion -> valor . OR valor
    (29) expresion -> valor . XOR valor
    (30) expresion -> valor . DIFERENTE valor
    (31) expresion -> valor . IGUALDOBLE valor
    (32) expresion -> valor . MAYOR valor
    (33) expresion -> valor . MAYORIGUAL valor
    (34) expresion -> valor . MENORIGUAL valor
    (35) expresion -> valor . MENOR valor
    (36) expresion -> valor .

    MAS             shift and go to state 45
    MENOS           shift and go to state 46
    POR             shift and go to state 47
    DIVIDIDO        shift and go to state 48
    MOD             shift and go to state 49
    ANDB            shift and go to state 50
    ORB             shift and go to state 51
    XORB            shift and go to state 52
    SHIFTD          shift and go to state 53
    SHIFTI          shift and go to state 54
    AND             shift and go to state 55
    OR              shift and go to state 56
    XOR             shift and go to state 57
    DIFERENTE       shift and go to state 58
    IGUALDOBLE      shift and go to state 59
    MAYOR           shift and go to state 60
    MAYORIGUAL      shift and go to state 61
    MENORIGUAL      shift and go to state 62
    MENOR           shift and go to state 63
    EXIT            reduce using rule 36 (expresion -> valor .)
    IMPRIMIR        reduce using rule 36 (expresion -> valor .)
    UNSET           reduce using rule 36 (expresion -> valor .)
    DOLAR           reduce using rule 36 (expresion -> valor .)
    GOTO            reduce using rule 36 (expresion -> valor .)
    IF              reduce using rule 36 (expresion -> valor .)
    PARC            reduce using rule 36 (expresion -> valor .)
    CORC            reduce using rule 36 (expresion -> valor .)
    PUNTOCOMA       reduce using rule 36 (expresion -> valor .)


state 26

    (41) expresion -> MAS . valor
    (49) valor -> . ENTERO
    (50) valor -> . DECIMAL
    (51) valor -> . CADENA
    (52) valor -> . DOLAR IDENTIFICADOR arra

    ENTERO          shift and go to state 36
    DECIMAL         shift and go to state 37
    CADENA          shift and go to state 38
    DOLAR           shift and go to state 33

    valor                          shift and go to state 64

state 27

    (37) expresion -> MENOS . valor
    (49) valor -> . ENTERO
    (50) valor -> . DECIMAL
    (51) valor -> . CADENA
    (52) valor -> . DOLAR IDENTIFICADOR arra

    ENTERO          shift and go to state 36
    DECIMAL         shift and go to state 37
    CADENA          shift and go to state 38
    DOLAR           shift and go to state 33

    valor                          shift and go to state 65

state 28

    (42) expresion -> ANDB . DOLAR IDENTIFICADOR arra

    DOLAR           shift and go to state 66


state 29

    (38) expresion -> ABS . PARA valor PARC

    PARA            shift and go to state 67


state 30

    (45) expresion -> PARA . INT PARC valor
    (46) expresion -> PARA . FLOAT PARC valor
    (47) expresion -> PARA . CHAR PARC valor
    (48) expresion -> PARA . expresion PARC
    (17) expresion -> . valor MAS valor
    (18) expresion -> . valor MENOS valor
    (19) expresion -> . valor POR valor
    (20) expresion -> . valor DIVIDIDO valor
    (21) expresion -> . valor MOD valor
    (22) expresion -> . valor ANDB valor
    (23) expresion -> . valor ORB valor
    (24) expresion -> . valor XORB valor
    (25) expresion -> . valor SHIFTD valor
    (26) expresion -> . valor SHIFTI valor
    (27) expresion -> . valor AND valor
    (28) expresion -> . valor OR valor
    (29) expresion -> . valor XOR valor
    (30) expresion -> . valor DIFERENTE valor
    (31) expresion -> . valor IGUALDOBLE valor
    (32) expresion -> . valor MAYOR valor
    (33) expresion -> . valor MAYORIGUAL valor
    (34) expresion -> . valor MENORIGUAL valor
    (35) expresion -> . valor MENOR valor
    (36) expresion -> . valor
    (37) expresion -> . MENOS valor
    (38) expresion -> . ABS PARA valor PARC
    (39) expresion -> . NOTB valor
    (40) expresion -> . NOT valor
    (41) expresion -> . MAS valor
    (42) expresion -> . ANDB DOLAR IDENTIFICADOR arra
    (43) expresion -> . READ PARA PARC
    (44) expresion -> . ARRAY PARA PARC
    (45) expresion -> . PARA INT PARC valor
    (46) expresion -> . PARA FLOAT PARC valor
    (47) expresion -> . PARA CHAR PARC valor
    (48) expresion -> . PARA expresion PARC
    (49) valor -> . ENTERO
    (50) valor -> . DECIMAL
    (51) valor -> . CADENA
    (52) valor -> . DOLAR IDENTIFICADOR arra

    INT             shift and go to state 68
    FLOAT           shift and go to state 69
    CHAR            shift and go to state 70
    MENOS           shift and go to state 27
    ABS             shift and go to state 29
    NOTB            shift and go to state 31
    NOT             shift and go to state 32
    MAS             shift and go to state 26
    ANDB            shift and go to state 28
    READ            shift and go to state 34
    ARRAY           shift and go to state 35
    PARA            shift and go to state 30
    ENTERO          shift and go to state 36
    DECIMAL         shift and go to state 37
    CADENA          shift and go to state 38
    DOLAR           shift and go to state 33

    valor                          shift and go to state 25
    expresion                      shift and go to state 71

state 31

    (39) expresion -> NOTB . valor
    (49) valor -> . ENTERO
    (50) valor -> . DECIMAL
    (51) valor -> . CADENA
    (52) valor -> . DOLAR IDENTIFICADOR arra

    ENTERO          shift and go to state 36
    DECIMAL         shift and go to state 37
    CADENA          shift and go to state 38
    DOLAR           shift and go to state 33

    valor                          shift and go to state 72

state 32

    (40) expresion -> NOT . valor
    (49) valor -> . ENTERO
    (50) valor -> . DECIMAL
    (51) valor -> . CADENA
    (52) valor -> . DOLAR IDENTIFICADOR arra

    ENTERO          shift and go to state 36
    DECIMAL         shift and go to state 37
    CADENA          shift and go to state 38
    DOLAR           shift and go to state 33

    valor                          shift and go to state 73

state 33

    (52) valor -> DOLAR . IDENTIFICADOR arra

    IDENTIFICADOR   shift and go to state 74


state 34

    (43) expresion -> READ . PARA PARC

    PARA            shift and go to state 75


state 35

    (44) expresion -> ARRAY . PARA PARC

    PARA            shift and go to state 76


state 36

    (49) valor -> ENTERO .

    MAS             reduce using rule 49 (valor -> ENTERO .)
    MENOS           reduce using rule 49 (valor -> ENTERO .)
    POR             reduce using rule 49 (valor -> ENTERO .)
    DIVIDIDO        reduce using rule 49 (valor -> ENTERO .)
    MOD             reduce using rule 49 (valor -> ENTERO .)
    ANDB            reduce using rule 49 (valor -> ENTERO .)
    ORB             reduce using rule 49 (valor -> ENTERO .)
    XORB            reduce using rule 49 (valor -> ENTERO .)
    SHIFTD          reduce using rule 49 (valor -> ENTERO .)
    SHIFTI          reduce using rule 49 (valor -> ENTERO .)
    AND             reduce using rule 49 (valor -> ENTERO .)
    OR              reduce using rule 49 (valor -> ENTERO .)
    XOR             reduce using rule 49 (valor -> ENTERO .)
    DIFERENTE       reduce using rule 49 (valor -> ENTERO .)
    IGUALDOBLE      reduce using rule 49 (valor -> ENTERO .)
    MAYOR           reduce using rule 49 (valor -> ENTERO .)
    MAYORIGUAL      reduce using rule 49 (valor -> ENTERO .)
    MENORIGUAL      reduce using rule 49 (valor -> ENTERO .)
    MENOR           reduce using rule 49 (valor -> ENTERO .)
    EXIT            reduce using rule 49 (valor -> ENTERO .)
    IMPRIMIR        reduce using rule 49 (valor -> ENTERO .)
    UNSET           reduce using rule 49 (valor -> ENTERO .)
    DOLAR           reduce using rule 49 (valor -> ENTERO .)
    GOTO            reduce using rule 49 (valor -> ENTERO .)
    IF              reduce using rule 49 (valor -> ENTERO .)
    PARC            reduce using rule 49 (valor -> ENTERO .)
    CORC            reduce using rule 49 (valor -> ENTERO .)
    PUNTOCOMA       reduce using rule 49 (valor -> ENTERO .)


state 37

    (50) valor -> DECIMAL .

    MAS             reduce using rule 50 (valor -> DECIMAL .)
    MENOS           reduce using rule 50 (valor -> DECIMAL .)
    POR             reduce using rule 50 (valor -> DECIMAL .)
    DIVIDIDO        reduce using rule 50 (valor -> DECIMAL .)
    MOD             reduce using rule 50 (valor -> DECIMAL .)
    ANDB            reduce using rule 50 (valor -> DECIMAL .)
    ORB             reduce using rule 50 (valor -> DECIMAL .)
    XORB            reduce using rule 50 (valor -> DECIMAL .)
    SHIFTD          reduce using rule 50 (valor -> DECIMAL .)
    SHIFTI          reduce using rule 50 (valor -> DECIMAL .)
    AND             reduce using rule 50 (valor -> DECIMAL .)
    OR              reduce using rule 50 (valor -> DECIMAL .)
    XOR             reduce using rule 50 (valor -> DECIMAL .)
    DIFERENTE       reduce using rule 50 (valor -> DECIMAL .)
    IGUALDOBLE      reduce using rule 50 (valor -> DECIMAL .)
    MAYOR           reduce using rule 50 (valor -> DECIMAL .)
    MAYORIGUAL      reduce using rule 50 (valor -> DECIMAL .)
    MENORIGUAL      reduce using rule 50 (valor -> DECIMAL .)
    MENOR           reduce using rule 50 (valor -> DECIMAL .)
    EXIT            reduce using rule 50 (valor -> DECIMAL .)
    IMPRIMIR        reduce using rule 50 (valor -> DECIMAL .)
    UNSET           reduce using rule 50 (valor -> DECIMAL .)
    DOLAR           reduce using rule 50 (valor -> DECIMAL .)
    GOTO            reduce using rule 50 (valor -> DECIMAL .)
    IF              reduce using rule 50 (valor -> DECIMAL .)
    PARC            reduce using rule 50 (valor -> DECIMAL .)
    CORC            reduce using rule 50 (valor -> DECIMAL .)
    PUNTOCOMA       reduce using rule 50 (valor -> DECIMAL .)


state 38

    (51) valor -> CADENA .

    MAS             reduce using rule 51 (valor -> CADENA .)
    MENOS           reduce using rule 51 (valor -> CADENA .)
    POR             reduce using rule 51 (valor -> CADENA .)
    DIVIDIDO        reduce using rule 51 (valor -> CADENA .)
    MOD             reduce using rule 51 (valor -> CADENA .)
    ANDB            reduce using rule 51 (valor -> CADENA .)
    ORB             reduce using rule 51 (valor -> CADENA .)
    XORB            reduce using rule 51 (valor -> CADENA .)
    SHIFTD          reduce using rule 51 (valor -> CADENA .)
    SHIFTI          reduce using rule 51 (valor -> CADENA .)
    AND             reduce using rule 51 (valor -> CADENA .)
    OR              reduce using rule 51 (valor -> CADENA .)
    XOR             reduce using rule 51 (valor -> CADENA .)
    DIFERENTE       reduce using rule 51 (valor -> CADENA .)
    IGUALDOBLE      reduce using rule 51 (valor -> CADENA .)
    MAYOR           reduce using rule 51 (valor -> CADENA .)
    MAYORIGUAL      reduce using rule 51 (valor -> CADENA .)
    MENORIGUAL      reduce using rule 51 (valor -> CADENA .)
    MENOR           reduce using rule 51 (valor -> CADENA .)
    EXIT            reduce using rule 51 (valor -> CADENA .)
    IMPRIMIR        reduce using rule 51 (valor -> CADENA .)
    UNSET           reduce using rule 51 (valor -> CADENA .)
    DOLAR           reduce using rule 51 (valor -> CADENA .)
    GOTO            reduce using rule 51 (valor -> CADENA .)
    IF              reduce using rule 51 (valor -> CADENA .)
    PARC            reduce using rule 51 (valor -> CADENA .)
    CORC            reduce using rule 51 (valor -> CADENA .)
    PUNTOCOMA       reduce using rule 51 (valor -> CADENA .)


state 39

    (10) instruccion -> IMPRIMIR PARA expresion . PARC PUNTOCOMA

    PARC            shift and go to state 77


state 40

    (11) instruccion -> UNSET PARA DOLAR . IDENTIFICADOR arra PARC PUNTOCOMA

    IDENTIFICADOR   shift and go to state 78


state 41

    (12) instruccion -> DOLAR IDENTIFICADOR arra . IGUAL expresion PUNTOCOMA

    IGUAL           shift and go to state 79


state 42

    (13) arra -> CORA . expresion CORC arra
    (17) expresion -> . valor MAS valor
    (18) expresion -> . valor MENOS valor
    (19) expresion -> . valor POR valor
    (20) expresion -> . valor DIVIDIDO valor
    (21) expresion -> . valor MOD valor
    (22) expresion -> . valor ANDB valor
    (23) expresion -> . valor ORB valor
    (24) expresion -> . valor XORB valor
    (25) expresion -> . valor SHIFTD valor
    (26) expresion -> . valor SHIFTI valor
    (27) expresion -> . valor AND valor
    (28) expresion -> . valor OR valor
    (29) expresion -> . valor XOR valor
    (30) expresion -> . valor DIFERENTE valor
    (31) expresion -> . valor IGUALDOBLE valor
    (32) expresion -> . valor MAYOR valor
    (33) expresion -> . valor MAYORIGUAL valor
    (34) expresion -> . valor MENORIGUAL valor
    (35) expresion -> . valor MENOR valor
    (36) expresion -> . valor
    (37) expresion -> . MENOS valor
    (38) expresion -> . ABS PARA valor PARC
    (39) expresion -> . NOTB valor
    (40) expresion -> . NOT valor
    (41) expresion -> . MAS valor
    (42) expresion -> . ANDB DOLAR IDENTIFICADOR arra
    (43) expresion -> . READ PARA PARC
    (44) expresion -> . ARRAY PARA PARC
    (45) expresion -> . PARA INT PARC valor
    (46) expresion -> . PARA FLOAT PARC valor
    (47) expresion -> . PARA CHAR PARC valor
    (48) expresion -> . PARA expresion PARC
    (49) valor -> . ENTERO
    (50) valor -> . DECIMAL
    (51) valor -> . CADENA
    (52) valor -> . DOLAR IDENTIFICADOR arra

    MENOS           shift and go to state 27
    ABS             shift and go to state 29
    NOTB            shift and go to state 31
    NOT             shift and go to state 32
    MAS             shift and go to state 26
    ANDB            shift and go to state 28
    READ            shift and go to state 34
    ARRAY           shift and go to state 35
    PARA            shift and go to state 30
    ENTERO          shift and go to state 36
    DECIMAL         shift and go to state 37
    CADENA          shift and go to state 38
    DOLAR           shift and go to state 33
